finalisation de l'animation pour l'appartion des plats etc...

--- a/site_production/restaurants/page_menu_2.html
+++ b/site_production/restaurants/page_menu_2.html
@@ -38,115 +38,121 @@
                 <i class="fa-regular fa-heart"></i>
             </div>
         </div>
-        <div class="menu">
-            <div class="menu__title">
-                <p>ENTRÉES</p>
-            </div>
-            <div class="green__bar">
-            </div>
-            <!--Début de la carte principal-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Tartare de thon</h3>
+        <div class="enter">
+            <div class="menu">
+                <div class="menu__title">
+                    <p>ENTRÉES</p>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Assaisonné au yuzu</p>
-                    <p class="bold">25€</p>
+                <div class="green__bar">
                 </div>
-            </div>
-            <!--Fin de la carte principal-->
-            <!--Carte 1.2-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Bouchée de homard croustillant</h3>
+                <!--Début de la carte principal-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Tartare de thon</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Assaisonné au yuzu</p>
+                        <p class="bold">25€</p>
+                    </div>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Et sa farandole de petits légumes</p>
-                    <p class="bold">35€</p>
+                <!--Fin de la carte principal-->
+                <!--Carte 1.2-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Bouchée de homard croustillant</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Et sa farandole de petits légumes</p>
+                        <p class="bold">35€</p>
+                    </div>
                 </div>
-            </div>
-            <!--Carte 1.3-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Poulet rôti aux herbes de Provence</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Et sa crème de truffe</p>
-                    <p class="bold">40€</p>
-                </div>
-            </div>
-        </div>
-        <div class="menu">
-            <div class="menu__title">
-                <p>PLATS</p>
-            </div>
-            <div class="green__bar">
-            </div>
-            <!--Carte 2.1-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Poulet rôti aux herbes de Provence</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Et sa crème de truffe</p>
-                    <p class="bold">40€</p>
-                </div>
-            </div>
-            <!--Carte 2.2-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Langouste rôtie</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Et ses légumes de saison</p>
-                    <p class="bold">35€</p>
-                </div>
-            </div>
-            <!--Carte 2.3-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Côte de boeuf Angus</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Et sa purée de panais</p>
-                    <p class="bold">44€</p>
+                <!--Carte 1.3-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Poulet rôti aux herbes de Provence</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Et sa crème de truffe</p>
+                        <p class="bold">40€</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="menu">
-            <div class="menu__title">
-                <p>DESSERTS</p>
+        <div class="dishes">
+            <div class="menu">
+                <div class="menu__title">
+                    <p>PLATS</p>
+                </div>
+                <div class="green__bar">
+                </div>
+                <!--Carte 2.1-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Poulet rôti aux herbes de Provence</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Et sa crème de truffe</p>
+                        <p class="bold">40€</p>
+                    </div>
+                </div>
+                <!--Carte 2.2-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Langouste rôtie</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Et ses légumes de saison</p>
+                        <p class="bold">35€</p>
+                    </div>
+                </div>
+                <!--Carte 2.3-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Côte de boeuf Angus</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Et sa purée de panais</p>
+                        <p class="bold">44€</p>
+                    </div>
+                </div>
             </div>
-            <div class="green__bar">
-            </div>
-            <!--Carte 3.1-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Farandole de desserts</h3>
+        </div>
+        <div class="desserts">
+            <div class="menu">
+                <div class="menu__title">
+                    <p>DESSERTS</p>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Du chef</p>
-                    <p class="bold">18€</p>
+                <div class="green__bar">
                 </div>
-            </div>
-            <!--Carte 3.2-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Crème brulée</h3>
+                <!--Carte 3.1-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Farandole de desserts</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Du chef</p>
+                        <p class="bold">18€</p>
+                    </div>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Revisitée</p>
-                    <p class="bold">22€</p>
+                <!--Carte 3.2-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Crème brulée</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Revisitée</p>
+                        <p class="bold">22€</p>
+                    </div>
                 </div>
-            </div>
-            <!--Carte 3.3-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Titamisu</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>À la noisette</p>
-                    <p class="bold">23€</p>
+                <!--Carte 3.3-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Titamisu</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>À la noisette</p>
+                        <p class="bold">23€</p>
+                    </div>
                 </div>
             </div>
         </div>
