--- a/site_production/restaurants/page_menu_3.html
+++ b/site_production/restaurants/page_menu_3.html
@@ -38,125 +38,131 @@
                 <i class="fa-regular fa-heart"></i>
             </div>
         </div>
-        <div class="menu">
-            <div class="menu__title">
-                <p>ENTRÉES</p>
-            </div>
-            <div class="green__bar">
-            </div>
-            <!--Début de la carte principal-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Ravioles de foie gras</h3>
+        <div class="enter">
+            <div class="menu">
+                <div class="menu__title">
+                    <p>ENTRÉES</p>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Accompagnées de leur crème à la truffe</p>
-                    <p class="bold">25€</p>
+                <div class="green__bar">
                 </div>
-            </div>
-            <!--Fin de la carte principal-->
-            <!--Carte 1.2-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Caviar osciètre</h3>
+                <!--Début de la carte principal-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Ravioles de foie gras</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Accompagnées de leur crème à la truffe</p>
+                        <p class="bold">25€</p>
+                    </div>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Sur blini à la farine de blé noir</p>
-                    <p class="bold">35€</p>
+                <!--Fin de la carte principal-->
+                <!--Carte 1.2-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Caviar osciètre</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Sur blini à la farine de blé noir</p>
+                        <p class="bold">35€</p>
+                    </div>
                 </div>
-            </div>
-            <!--Carte 1.3-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Homard et espuma de potiron</h3>
+                <!--Carte 1.3-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Homard et espuma de potiron</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Marinées aux zestes d'orange</p>
+                        <p class="bold">20€</p>
+                    </div>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Marinées aux zestes d'orange</p>
-                    <p class="bold">20€</p>
-                </div>
-            </div>
-            <!--Carte 1.4-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Foie gras de canard cuit entier</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Confiture de figue et pain toasté</p>
-                    <p class="bold">35€</p>
-                </div>
-            </div>
-        </div>
-        <div class="menu">
-            <div class="menu__title">
-                <p>PLATS</p>
-            </div>
-            <div class="green__bar">
-            </div>
-            <!--Carte 2.1-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Noix de coquilles Saint-Jacques</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Sur lit de purée de céleri-rave</p>
-                    <p class="bold">40€</p>
-                </div>
-            </div>
-            <!--Carte 2.2-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Langoustine poêlée</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Purée de patate douce</p>
-                    <p class="bold">35€</p>
-                </div>
-            </div>
-            <!--Carte 2.3-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Mijoté de queue de boeuf</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Et riz sauvage aux zestes de citron</p>
-                    <p class="bold">45€</p>
+                <!--Carte 1.4-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Foie gras de canard cuit entier</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Confiture de figue et pain toasté</p>
+                        <p class="bold">35€</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="menu">
-            <div class="menu__title">
-                <p>DESSERTS</p>
+        <div class="dishes">
+            <div class="menu">
+                <div class="menu__title">
+                    <p>PLATS</p>
+                </div>
+                <div class="green__bar">
+                </div>
+                <!--Carte 2.1-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Noix de coquilles Saint-Jacques</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Sur lit de purée de céleri-rave</p>
+                        <p class="bold">40€</p>
+                    </div>
+                </div>
+                <!--Carte 2.2-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Langoustine poêlée</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Purée de patate douce</p>
+                        <p class="bold">35€</p>
+                    </div>
+                </div>
+                <!--Carte 2.3-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Mijoté de queue de boeuf</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Et riz sauvage aux zestes de citron</p>
+                        <p class="bold">45€</p>
+                    </div>
+                </div>
             </div>
-            <div class="green__bar">
-            </div>
-            <!--Carte 3.1-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Macaron noisette et chocolat</h3>
+        </div>
+        <div class="desserts">
+            <div class="menu">
+                <div class="menu__title">
+                    <p>DESSERTS</p>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Glace au caramel brun et sel de Guérande</p>
-                    <p class="bold">18€</p>
+                <div class="green__bar">
                 </div>
-            </div>
-            <!--Carte 3.2-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Baba au rhum revisité</h3>
+                <!--Carte 3.1-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Macaron noisette et chocolat</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Glace au caramel brun et sel de Guérande</p>
+                        <p class="bold">18€</p>
+                    </div>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Avec son coulis de citron</p>
-                    <p class="bold">22€</p>
+                <!--Carte 3.2-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Baba au rhum revisité</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Avec son coulis de citron</p>
+                        <p class="bold">22€</p>
+                    </div>
                 </div>
-            </div>
-            <!--Carte 3.3-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Tarte au citron meringuée</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Déstructurée</p>
-                    <p class="bold">23€</p>
+                <!--Carte 3.3-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Tarte au citron meringuée</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Déstructurée</p>
+                        <p class="bold">23€</p>
+                    </div>
                 </div>
             </div>
         </div>
