--- a/site_production/restaurants/page_menu_4.html
+++ b/site_production/restaurants/page_menu_4.html
@@ -38,115 +38,121 @@
                 <i class="fa-regular fa-heart"></i>
             </div>
         </div>
-        <div class="menu">
-            <div class="menu__title">
-                <p>ENTRÉES</p>
-            </div>
-            <div class="green__bar">
-            </div>
-            <!--Début de la carte principal-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Tartare de poulpe acidulé</h3>
+        <div class="enter">
+            <div class="menu">
+                <div class="menu__title">
+                    <p>ENTRÉES</p>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Au restes d'orange</p>
-                    <p class="bold">25€</p>
+                <div class="green__bar">
                 </div>
-            </div>
-            <!--Fin de la carte principal-->
-            <!--Carte 1.2-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Velouté de légumes d'antan</h3>
+                <!--Début de la carte principal-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Tartare de poulpe acidulé</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Au restes d'orange</p>
+                        <p class="bold">25€</p>
+                    </div>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Carotte, panais, topinambour</p>
-                    <p class="bold">35€</p>
+                <!--Fin de la carte principal-->
+                <!--Carte 1.2-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Velouté de légumes d'antan</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Carotte, panais, topinambour</p>
+                        <p class="bold">35€</p>
+                    </div>
                 </div>
-            </div>
-            <!--Carte 1.3-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Soupe à l'oignon</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Revisité</p>
-                    <p class="bold">20€</p>
-                </div>
-            </div>
-        </div>
-        <div class="menu">
-            <div class="menu__title">
-                <p>PLATS</p>
-            </div>
-            <div class="green__bar">
-            </div>
-            <!--Carte 2.1-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Coquilles Saint-Jacques</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Accompagnées d'une purée de panais</p>
-                    <p class="bold">40€</p>
-                </div>
-            </div>
-            <!--Carte 2.2-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Magret de canard</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Et parmentier de pommes de terre</p>
-                    <p class="bold">35€</p>
-                </div>
-            </div>
-            <!--Carte 2.3-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Sur son lit de gnocchis aux légumes</p>
-                    <p class="bold">44€</p>
+                <!--Carte 1.3-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Soupe à l'oignon</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Revisité</p>
+                        <p class="bold">20€</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="menu">
-            <div class="menu__title">
-                <p>DESSERTS</p>
+        <div class="dishes">
+            <div class="menu">
+                <div class="menu__title">
+                    <p>PLATS</p>
+                </div>
+                <div class="green__bar">
+                </div>
+                <!--Carte 2.1-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Coquilles Saint-Jacques</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Accompagnées d'une purée de panais</p>
+                        <p class="bold">40€</p>
+                    </div>
+                </div>
+                <!--Carte 2.2-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Magret de canard</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Et parmentier de pommes de terre</p>
+                        <p class="bold">35€</p>
+                    </div>
+                </div>
+                <!--Carte 2.3-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <p class="bold">44€</p>
+                    </div>
+                </div>
             </div>
-            <div class="green__bar">
-            </div>
-            <!--Carte 3.1-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Pétales de violettes glacés</h3>
+        </div>
+        <div class="desserts">
+            <div class="menu">
+                <div class="menu__title">
+                    <p>DESSERTS</p>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Et sa purée de noisettes</p>
-                    <p class="bold">18€</p>
+                <div class="green__bar">
                 </div>
-            </div>
-            <!--Carte 3.2-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Fondant au chocolat</h3>
+                <!--Carte 3.1-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Pétales de violettes glacés</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Et sa purée de noisettes</p>
+                        <p class="bold">18€</p>
+                    </div>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Revisité</p>
-                    <p class="bold">22€</p>
+                <!--Carte 3.2-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Fondant au chocolat</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Revisité</p>
+                        <p class="bold">22€</p>
+                    </div>
                 </div>
-            </div>
-            <!--Carte 3.3-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Millefeuille croustillant</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Myrtilles et pâte d'amande</p>
-                    <p class="bold">23€</p>
+                <!--Carte 3.3-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Millefeuille croustillant</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Myrtilles et pâte d'amande</p>
+                        <p class="bold">23€</p>
+                    </div>
                 </div>
             </div>
         </div>
