--- a/site_production/restaurants/page_menu_1.html
+++ b/site_production/restaurants/page_menu_1.html
@@ -38,115 +38,121 @@
                 <i class="fa-regular fa-heart"></i>
             </div>
         </div>
-        <div class="menu">
-            <div class="menu__title">
-                <p>ENTRÉES</p>
-            </div>
-            <div class="green__bar">
-            </div>
-            <!--Début de la carte principal-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Fricassée d'escargots</h3>
+        <div class="enter">
+            <div class="menu">
+                <div class="menu__title">
+                    <p>ENTRÉES</p>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Au piment d'Espelette</p>
-                    <p class="bold">25€</p>
+                <div class="green__bar">
                 </div>
-            </div>
-            <!--Fin de la carte principal-->
-            <!--Carte 1.2-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Foie gras de canard mi-cuit</h3>
+                <!--Début de la carte principal-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Fricassée d'escargots</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Au piment d'Espelette</p>
+                        <p class="bold">25€</p>
+                    </div>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Et ses copeaux de truffe noire</p>
-                    <p class="bold">35€</p>
+                <!--Fin de la carte principal-->
+                <!--Carte 1.2-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Foie gras de canard mi-cuit</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Et ses copeaux de truffe noire</p>
+                        <p class="bold">35€</p>
+                    </div>
                 </div>
-            </div>
-            <!--Carte 1.3-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Œuf au plat</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Assaisonné à la truffe sur lit de caviar</p>
-                    <p class="bold">20€</p>
-                </div>
-            </div>
-        </div>
-        <div class="menu">
-            <div class="menu__title">
-                <p>PLATS</p>
-            </div>
-            <div class="green__bar">
-            </div>
-            <!--Carte 2.1-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Filet de boeuf aux herbes</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Accompagné de sa ribambelle de légumes</p>
-                    <p class="bold">40€</p>
-                </div>
-            </div>
-            <!--Carte 2.2-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Parmentier de queue de boeuf</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>À la truffe noire sur sa purée de panais</p>
-                    <p class="bold">35€</p>
-                </div>
-            </div>
-            <!--Carte 2.3-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Filet de turbot</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Aux agrumes</p>
-                    <p class="bold">44€</p>
+                <!--Carte 1.3-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Œuf au plat</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <p class="bold">20€</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="menu">
-            <div class="menu__title">
-                <p>DESSERTS</p>
+        <div class="dishes">
+            <div class="menu">
+                <div class="menu__title">
+                    <p>PLATS</p>
+                </div>
+                <div class="green__bar">
+                </div>
+                <!--Carte 2.1-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Filet de boeuf aux herbes</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Accompagné de sa ribambelle de légumes</p>
+                        <p class="bold">40€</p>
+                    </div>
+                </div>
+                <!--Carte 2.2-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Parmentier de queue de boeuf</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>À la truffe noire sur sa purée de panais</p>
+                        <p class="bold">35€</p>
+                    </div>
+                </div>
+                <!--Carte 2.3-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Filet de turbot</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Aux agrumes</p>
+                        <p class="bold">44€</p>
+                    </div>
+                </div>
             </div>
-            <div class="green__bar">
-            </div>
-            <!--Carte 3.1-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Paris-Brest</h3>
+        </div>
+        <div class="desserts">
+            <div class="menu">
+                <div class="menu__title">
+                    <p>DESSERTS</p>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Revisité</p>
-                    <p class="bold">18€</p>
+                <div class="green__bar">
                 </div>
-            </div>
-            <!--Carte 3.2-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Macaron au chocolat d'exception</h3>
+                <!--Carte 3.1-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Paris-Brest</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Revisité</p>
+                        <p class="bold">18€</p>
+                    </div>
                 </div>
-                <div class="menu__cards__txt__price">
-                    <p>Et glace à la vanille de Madagascar</p>
-                    <p class="bold">22€</p>
+                <!--Carte 3.2-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Macaron au chocolat d'exception</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Et glace à la vanille de Madagascar</p>
+                        <p class="bold">22€</p>
+                    </div>
                 </div>
-            </div>
-            <!--Carte 3.3-->
-            <div class="menu__cards">
-                <div class="menu__cards__title">
-                    <h3>Mousse au chocolat</h3>
-                </div>
-                <div class="menu__cards__txt__price">
-                    <p>Au piment d'Espelette et à la truffe noire</p>
-                    <p class="bold">23€</p>
+                <!--Carte 3.3-->
+                <div class="menu__cards">
+                    <div class="menu__cards__title">
+                        <h3>Mousse au chocolat</h3>
+                    </div>
+                    <div class="menu__cards__txt__price">
+                        <p>Au piment d'Espelette et à la truffe noire</p>
+                        <p class="bold">23€</p>
+                    </div>
                 </div>
             </div>
         </div>
