restructuration du code des carte des menu afin de pouvoir accueillir l'animation du check. Faire marcher le text-overflow: ellipse;

--- a/site_production/restaurants/page_menu_1.html
+++ b/site_production/restaurants/page_menu_1.html
@@ -47,23 +47,29 @@
                 </div>
                 <!--Début de la carte principal-->
                 <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Fricassée d'escargots</h3>
+                    <div class="menu__cards__description">
+                        <h3>Foie gras de canard mi-cuit</h3>
+                        <p>Et ses copeaux de truffe noire</p>
                     </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Au piment d'Espelette</p>
-                        <p class="bold">25€</p>
+                    <div class="menu__cards__price">
+                        <p class="bold">35€</p>
+                    </div>
+                    <div class="menu__cards__check">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <!--Fin de la carte principal-->
                 <!--Carte 1.2-->
                 <div class="menu__cards">
-                    <div class="menu__cards__title">
+                    <div class="menu__cards__description">
                         <h3>Foie gras de canard mi-cuit</h3>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Et ses copeaux de truffe noire</p>
+                    <div class="menu__cards__price">
                         <p class="bold">35€</p>
+                    </div>
+                    <div class="menu__cards__check">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <!--Carte 1.3-->
