Finalisation a 90% de l'animation check page menu

--- a/site_production/restaurants/page_menu_1.html
+++ b/site_production/restaurants/page_menu_1.html
@@ -46,6 +46,7 @@
                 <div class="green__bar">
                 </div>
                 <!--Début de la carte principal-->
+                <a href="#" class="container__menu">
                 <div class="menu__cards">
                     <div class="menu__cards__description">
                         <h3>Foie gras de canard mi-cuit</h3>
@@ -58,6 +59,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
+                </a>
                 <!--Fin de la carte principal-->
                 <!--Carte 1.2-->
                 <div class="menu__cards">
