Mise a jour et refonte de la carte principal pour accueillir la transition du check vert il ne reste plus cas faire la transition

--- a/site_production/restaurants/page_menu_1.html
+++ b/site_production/restaurants/page_menu_1.html
@@ -46,20 +46,17 @@
                 <div class="green__bar">
                 </div>
                 <!--Début de la carte principal-->
-                <a href="#" class="container__menu">
-                <div class="menu__cards">
-                    <div class="menu__cards__description">
-                        <h3>Foie gras de canard mi-cuit</h3>
-                        <p>Et ses copeaux de truffe noire</p>
-                    </div>
-                    <div class="menu__cards__price">
-                        <p class="bold">35€</p>
-                    </div>
-                    <div class="menu__cards__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
+                <div class="container__menu">
+                    <label for="menu" class="menu__cards">
+                      <h3>Foie gras de canard mi-cuit</h3> 
+                      <div class="menu__cards__price">
+                          <p>Et ses copeaux de truffe noire</p>
+                          <span class="bold">35€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="menu"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
-                </a>
                 <!--Fin de la carte principal-->
                 <!--Carte 1.2-->
                 <div class="menu__cards">
