--- a/site_production/restaurants/page_menu_1.html
+++ b/site_production/restaurants/page_menu_1.html
@@ -47,39 +47,40 @@
                 </div>
                 <!--Début de la carte principal-->
                 <div class="container__menu">
-                    <label for="menu" class="menu__cards">
-                      <h3>Foie gras de canard mi-cuit</h3> 
-                      <div class="menu__cards__price">
-                          <p>Et ses copeaux de truffe noire</p>
-                          <span class="bold">35€</span>
+                    <label for="enter-1" class="container__menu__cards">
+                      <h3>Fricassée d'escargots</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Au piment d'Espelette</p>
+                          <span class="bold">25€</span>
                       </div>
                     </label>
-                    <input type="checkbox" id="menu"/>
+                    <input type="checkbox" id="enter-1"/>
                     <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Fin de la carte principal-->
                 <!--Carte 1.2-->
-                <div class="menu__cards">
-                    <div class="menu__cards__description">
-                        <h3>Foie gras de canard mi-cuit</h3>
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
-                    </div>
-                    <div class="menu__cards__price">
-                        <p class="bold">35€</p>
-                    </div>
-                    <div class="menu__cards__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
+                <div class="container__menu">
+                    <label for="enter-2" class="container__menu__cards">
+                      <h3>Foie gras de canard mi-cuit</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Et ses copeaux de truffe noire</p>
+                          <span class="bold">35€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="enter-2"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 1.3-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Œuf au plat</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
-                        <p class="bold">20€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="enter-3" class="container__menu__cards">
+                      <h3>Œufs au plat</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Assaisonné à la truffe sur lit de caviar</p>
+                          <span class="bold">20€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="enter-3"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
         </div>
@@ -91,34 +92,40 @@
                 <div class="green__bar">
                 </div>
                 <!--Carte 2.1-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Filet de boeuf aux herbes</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Accompagné de sa ribambelle de légumes</p>
-                        <p class="bold">40€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dishe-1" class="container__menu__cards">
+                      <h3>Filets de bœuf aux herbes</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Accompagné de sa ribambelle de légumes</p>
+                          <span class="bold">40€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dishe-1"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 2.2-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Parmentier de queue de boeuf</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>À la truffe noire sur sa purée de panais</p>
-                        <p class="bold">35€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dishe-2" class="container__menu__cards">
+                      <h3>Parmentier de queue de bœuf</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>À la truffe noire sur sa purée de panais</p>
+                          <span class="bold">35€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dishe-2"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 2.3-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Filet de turbot</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Aux agrumes</p>
-                        <p class="bold">44€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dishe-3" class="container__menu__cards">
+                      <h3>Filet de turbot</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Aux agrumes</p>
+                          <span class="bold">44€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dishe-3"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
         </div>
@@ -130,34 +137,40 @@
                 <div class="green__bar">
                 </div>
                 <!--Carte 3.1-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Paris-Brest</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Revisité</p>
-                        <p class="bold">18€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dessert-1" class="container__menu__cards">
+                      <h3>Paris-Brest</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Revisité</p>
+                          <span class="bold">18€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dessert-1"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 3.2-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Macaron au chocolat d'exception</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Et glace à la vanille de Madagascar</p>
-                        <p class="bold">22€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dessert-2" class="container__menu__cards">
+                      <h3>Macaron au chocolat d'exception</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Et glace à la vanille de Madagascar</p>
+                          <span class="bold">22€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dessert-2"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 3.3-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Mousse au chocolat</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Au piment d'Espelette et à la truffe noire</p>
-                        <p class="bold">23€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dessert-3" class="container__menu__cards">
+                      <h3>Mousse au chocolat</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Au piment d'Espelette et à la truffe noire</p>
+                          <span class="bold">23€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dessert-3"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
         </div>
